[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "ccxt>=4.4.92",
    "cryptography>=45.0.4",
    "feedparser>=6.0.11",
    "flask>=3.1.1",
    "joblib>=1.5.1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.3",
    "numba>=0.61.2",
    "numexpr>=2.11.0",
    "numpy>=2.2.6",
    "openai>=1.93.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "plotly>=6.2.0",
    "psutil>=7.0.0",
    "psycopg2-binary>=2.9.10",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.1.1",
    "randomgen>=2.1.1",
    "requests>=2.32.4",
    "scikit-learn>=1.7.0",
    "scipy>=1.16.0",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.41",
    "statsmodels>=0.14.4",
    "tensorflow>=2.14.0",
    "textblob>=0.19.0",
    "tqdm>=4.67.1",
    "trafilatura>=2.0.0",
    "typing-extensions>=4.14.0",
    "ujson>=5.10.0",
    "xlrd>=2.0.2",
    "yfinance>=0.2.64",
]
